# ChangeLog for dev-perl/MooseX-Types
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-Types/ChangeLog,v 1.10 2009/09/07 08:47:07 tove Exp $

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -MooseX-Types-0.16.ebuild,
  -MooseX-Types-0.17.ebuild:
  Cleanup

*MooseX-Types-0.19 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
  +MooseX-Types-0.19.ebuild:
  Version bump via perl-bump experimental tool.

*MooseX-Types-0.17 (20 Aug 2009)

  20 Aug 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.17.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -MooseX-Types-0.11.ebuild,
  -MooseX-Types-0.12.ebuild, -MooseX-Types-0.13.ebuild,
  -MooseX-Types-0.14.ebuild:
  Cleanup

*MooseX-Types-0.16 (30 Jun 2009)

  30 Jun 2009; Torsten Veller <tove@gentoo.org> -MooseX-Types-0.15.ebuild,
  +MooseX-Types-0.16.ebuild:
  Version bump. Cleanup

*MooseX-Types-0.15 (29 Jun 2009)

  29 Jun 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.15.ebuild:
  Version bump

*MooseX-Types-0.14 (27 Jun 2009)

  27 Jun 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.14.ebuild:
  Version bump

*MooseX-Types-0.13 (23 Jun 2009)

  23 Jun 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.13.ebuild:
  Version bump

*MooseX-Types-0.12 (15 Jun 2009)

  15 Jun 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.12.ebuild:
  Version bump

  09 Jun 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.11.ebuild,
  +metadata.xml:
  Initial import from perl-experimental. Based on ebuild by Michele
  Beltrame

*MooseX-Types-0.11 (24 May 2009)

  24 May 2009; Torsten Veller <tove@gentoo.org> +MooseX-Types-0.11.ebuild:
  Version bump

  19 Apr 2009; Michele Beltrame <mb@cattlegrid.info>:
  Initial
